# lab_mebmership

./: README.md  apis.http  docker-compose.yml
dapr-publisher/src/: main.rs
dapr-subscriber/src/: main.rs
member/: .env  Cargo.toml  Dockerfile  build.rs
member/proto/: members.proto
member/src/: client.rs  entity.rs  handler.rs  lib.rs  main.rs  utils.rs
