[package]
name = "member"
version = "0.1.0"
edition = "2021"
authors = ["Moaz bin Mokhtar <moaz.mokhtar@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.7"
prost = "0.10"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15.0"
env_logger = "0.9.0"
actix-web = "4.0.1"
chrono = {version = "0.4.19", features = ["serde"]}
log = "0.4.14"
serde = {version = "1.0.136", features = ["derive"]}
serde_json = "1.0.79"
uuid = {version = "0.8.2", features = ["serde", "v4"]}

[build-dependencies]
tonic-build = "0.7"
